--- a/小米官网/CSS/xiaomi.css
+++ b/小米官网/CSS/xiaomi.css
@@ -160,8 +160,7 @@ a{
     transition: all 0.3s linear;
     z-index: 999;/*定位元素之间存在层级关系，z-index用来调整层级*/
 }
-.search-item:hover .item-detail{
-
+.search-list:hover .item-detail{
     border-top:2px solid #b0b0b0;
     height: 200px;
 }
@@ -697,10 +696,7 @@ a{
     position:relative;
 
 }
-.list-item:hover .up-box{
-    height: 70px;
-    /*padding: 10px 20px;*/
-}
+
 .up-box{
     width: 234px;
     height: 0;
@@ -710,6 +706,7 @@ a{
     left: 0;
     bottom: 0;
     transition: all 0.3s linear;
+    /*display: none;*/
 }
 .list-item>.up-box h3{
     width: 194px;
@@ -717,16 +714,28 @@ a{
     font-size: 12px;
     color: #fff;
     text-align: left;
+    opacity:0;
 }
 .up-box p{
     width: 194px;
     font-size: 11px;
     margin: 10px auto 0;
     color: #fff;
-    opacity: 0.8;
+    /*opacity: 0.8;*/
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    opacity: 0;
+}
+.list-item:hover .up-box {
+    height: 70px;
+    /*display: block;*/
+}
+.list-item:hover .up-box p{
+    opacity: 0.8;
+}
+.list-item:hover .up-box h3{
+    opacity: 1;
 }
 
 .list-item0{
@@ -1227,6 +1236,7 @@ a{
     height: 80px;
     background: #ffffff;
     border-bottom: 1px solid #e0e0e0;
+    cursor: pointer;
 }
 .list-ser-detail{
     width: 20%;
@@ -1281,6 +1291,7 @@ a{
     color: #616161;
     background: #fff;
     float: right;
+    cursor: pointer;
 }
 .item-right h2{
     color: #ff6709;
@@ -1297,6 +1308,7 @@ a{
     line-height: 28px;
     margin: 5px auto 0;
     color: #ff6709;
+
 }
 .service:hover{
     background:#ff6700;
