--- a/素馨花卉/css/about.css
+++ b/素馨花卉/css/about.css
@@ -8,6 +8,13 @@
     margin: 0 auto;
 }
 /*头部开始*/
+header{
+    width: 100%;
+    height: 79px;
+    position: fixed;
+    left: 0;
+    top: 0;
+}
 .sx-header{
     width: 100%;
     height: 79px;
@@ -56,8 +63,8 @@
 
 .banner-box{
     width: 100%;
-    height: 300px;
-    margin-top:-88px;
+    height: 320px;
+    margin-top:79px;
 }
 .banner{
     width: 100%;
@@ -66,7 +73,7 @@
 .banner img{
     width: 100%;
     height:100%;
-    margin-top:-88px;
+    margin-top:-79px;
 }
 .dots{
     width: 100px;
@@ -86,7 +93,7 @@
 }
 .studio-box{
     height: 652px;
-    padding: 30px 0px;
+    padding: 0 0 30px;
     border-bottom: 1px solid #f0f2f5;
 }
 .studio{
