--- a/素馨花卉/css/index.css
+++ b/素馨花卉/css/index.css
@@ -8,6 +8,13 @@
     margin: 0 auto;
 }
 /*头部开始*/
+header{
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999;
+}
 .sx-header{
     width: 100%;
     height: 79px;
