--- a/小米官网/CSS/xiaomi.css
+++ b/小米官网/CSS/xiaomi.css
@@ -999,6 +999,8 @@ a{
     padding:40px 0 0;
     float: left;
     margin-right: 14px;
+    cursor: pointer;
+    /*transition:all 0.8s*/
 }
 .content-item h3{
     margin: 0 10px 18px;
@@ -1088,13 +1090,12 @@ a{
  .dots-style:hover{
      background: #ff6709;
  }
+ .content-btn{
+     transition: all 0.8s;
+ }
  .content-btn-left{
-     width: 25px;
-     height: 50px;
-     background: rgba(2,0,10,0.25);
-     position: absolute;
-     left: 0;
-     top: 88px;
+     width: 0;
+     height: 0;
  }
  .content-btn-left i{
      font-size: 22px;
@@ -1112,8 +1113,15 @@ a{
 .content-item:hover .content-btn-left:hover{
     background: rgba(2,0,10,0.5);
 }
-.content-item:hover .content-btn-right:hover{
-    background: rgba(2,0,10,0.5);
+.content-btn-right{
+    width: 0px;
+    height: 0px;
+}
+
+.content-btn-right i{
+    font-size: 22px;
+    color: #fff;
+    line-height: 50px;
 }
 .content-item:hover .content-btn-right{
      width: 25px;
@@ -1123,28 +1131,20 @@ a{
      right: 0;
      top: 88px;
 }
-.content-btn-right{
-     width: 0px;
-     height: 0px;
- }
-
- .content-btn-right i{
-     font-size: 22px;
-     color: #fff;
-     line-height: 50px;
- }
-.content-btn-left{
-    width: 500px;
-    height: 0;
-    background: #fff;
-    position: absolute;
-    left: 234px;
-    top: 0px;
-    z-index: 999;
+.content-item:hover .content-btn-right:hover{
+    background: rgba(2,0,10,0.5);
 }
-.banner-item:hover .banner-item-detail2{
 
-}
+/*.content-btn-left{*/
+    /*width: 500px;*/
+    /*height: 0;*/
+    /*background: #fff;*/
+    /*position: absolute;*/
+    /*left: 234px;*/
+    /*top: 0px;*/
+    /*z-index: 999;*/
+/*}*/
+
 /*内容结束*/
 /*视屏开始*/
 .video-box{
