--- a/移动端/css/pay4.css
+++ b/移动端/css/pay4.css
@@ -138,7 +138,7 @@ html{
 }
 .content2{
     width: 7.02rem;
-    height: 8.35rem;
+    height: 7.25rem;
     /*background: #9acfea;*/
     margin: 0.24rem auto 0;
 }
@@ -290,15 +290,22 @@ html{
 }
 .footer{
     width: 100%;
-    height: 0.78rem;
+    height: 2.14rem;
     background: #eeeeee;
+    position: relative;
 }
 .button{
+    display: block;
     width: 2.64rem;
     height: 0.44rem;
     background: #0ecf98;
     text-align: center;
-    margin: 0 auto;
+    margin:  auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     border-radius: 0.2rem;
 }
 .button h3{
