--- a/素馨花卉/css/about.css
+++ b/素馨花卉/css/about.css
@@ -63,7 +63,7 @@ header{
 
 .banner-box{
     width: 100%;
-    height: 320px;
+
     margin-top:79px;
 }
 .banner{
@@ -93,13 +93,13 @@ header{
 }
 .studio-box{
     height: 652px;
-    padding: 0 0 30px;
+    padding: 30px 0 ;
     border-bottom: 1px solid #f0f2f5;
 }
 .studio{
     width: 1170px;
     height: 650px;
-    margin: 0 auto;
+    margin: 0 auto ;
 }
 .studio h3{
     height: 42px;
