--- a/素馨花卉/css/index.css
+++ b/素馨花卉/css/index.css
@@ -212,21 +212,25 @@ header{
 }
 .btn i{
     font-size: 35px;
-    color: #bdbdbd;
+    color: #ccc;
 }
 .btn-left{
     width: 25px;
     height: 25px;
     position: absolute;
-    left: -50px;
-    top:150px;
+    left: 10px;
+    top:200px;
+    cursor: pointer;
+}
+.btn i:hover{
+    color: #a3a3a3;
 }
 .btn-right{
     width: 25px;
     height: 25px;
     position: absolute;
-    right: -40px;
-    top:150px;
+    right: 10px;
+    top:200px;
     float: right;
 }
 .flower-content{
@@ -290,9 +294,10 @@ header{
     position: absolute;
     bottom: 0;
     left: 0;
+    cursor: pointer;
 }
 .xiangqing:hover{
-    background: #f9938a;
+    background: #f98784;
 }
 .xiangqing i{
     color:#9c2215;
