--- a/小米官网/CSS/xiaomi.css
+++ b/小米官网/CSS/xiaomi.css
@@ -480,12 +480,13 @@ a{
 .big-box{
     background: #f5f5f5;
     padding-bottom: 50px;
+    margin-top: 20px;
 }
 /*小米手机开始*/
 .phone-box{
     height: 686px;
     background: #f5f5f5;
-    margin:0 auto;
+    margin:0 auto 20px;
 }
 .phone-title{
     width: 100%;
@@ -618,7 +619,7 @@ a{
 /*小米家电开始*/
 .house-box{
     height: 686px;
-    margin: 0 auto;
+    margin: 0 auto 20px;
 }
 .house-title{
     height: 58px;
@@ -1390,4 +1391,13 @@ a{
 }
 .video-item:hover{
     box-shadow: 0 15px 30px rgba(0,0,0,0.1) ;
+}
+.ad{
+    width: 1226px;
+    height: 120px;
+    margin:0 auto;
+}
+.ad img{
+    width: 100%;
+    height: 100%;
 }
