--- a/素馨花卉/css/index.css
+++ b/素馨花卉/css/index.css
@@ -59,12 +59,15 @@ header{
     color: #16b0dc;
 }
 /*头部结束*/
-
-.banner-box{
+.Banner{
     width: 100%;
     height: 710px;
-    margin-top: -79px;
-    /*margin-top:-88px;*/
+}
+.banner-box{
+    width: 1466px;
+    height: 710px;
+    /*margin-top: -79px;*/
+    margin: -79px auto 0;
 }
 .banner{
     width: 100%;
