--- a/素馨花卉/css/index.css
+++ b/素馨花卉/css/index.css
@@ -60,11 +60,11 @@ header{
 }
 /*头部结束*/
 .Banner{
-    width: 100%;
-    height: 710px;
+    /*width: 100%;*/
+    /*height: 710px;*/
 }
 .banner-box{
-    width: 1466px;
+    width: 100%;
     height: 710px;
     /*margin-top: -79px;*/
     margin: -79px auto 0;
@@ -87,7 +87,7 @@ header{
     bottom: 10px;
     left: 0;
     right: 0;
-    margin: auto;
+    margin:0 auto;
     z-index: 99;
 }
 .dot:nth-child(3){
