--- a/移动端/css/index.css
+++ b/移动端/css/index.css
@@ -8,6 +8,10 @@
     width: 100%;
     height: 0.9rem;
     background: #0ecf98;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
 }
 .topbar{
     width:100%;
@@ -78,10 +82,11 @@
     width: 100%;
     height: 4.24rem;
     /*background: #83c44e;*/
-    margin-top: 0.24rem;
+    margin-top: 1.14rem;
     box-shadow: -0.002rem 0.03rem 0.1rem 0rem
     rgba(255, 178, 12, 0.75);
     position: relative;
+
 }
 .imgBox{
     width: 7.02rem;
