--- a/素馨花卉/css/index.css
+++ b/素馨花卉/css/index.css
@@ -61,9 +61,8 @@ header{
 /*头部结束*/
 .banner-box{
     width: 100%;
-    height: 710px;
-    /*margin-top: -79px;*/
-    margin: -79px auto 0;
+    /*height: 710px;*/
+    margin-top:79px;
 }
 .banner{
     width: 100%;
@@ -73,7 +72,7 @@ header{
 .banner img{
     width: 100%;
     height:100%;
-    /*margin-top:-88px;*/
+    margin-top:-79px;
 }
 .dots{
     width: 100px;
