--- a/素馨花卉/css/index.css
+++ b/素馨花卉/css/index.css
@@ -290,6 +290,7 @@ header{
     vertical-align: middle;
 }
 .language{
+    width: 100%;
     height: 580px;
     background: #f5f5f5;
     /*margin-top: ;*/
@@ -465,6 +466,7 @@ header{
 }
 /*底部开始*/
 .footer-box{
+    width: 100%;
     height: 140px;
     background: #f5f5f5;
     padding:20px 0
